[package]
name = "parel"
version = "0.1.1"
edition = "2021"
authors = ["GlacierSG <glaciersg@proton.me>"]
description = "Tool to run linux commands in parallel"
license = "MIT"
repository = "https://github.com/GlacierSG/parel"
readme = "README.md"
keywords = ["parallel","linux"]

[dependencies]
clap = { version = "4.5.22", features = ["derive"] }
colored = "2.1.0"
indicatif = "0.17.9"
rand = "0.8.5"
tokio = { version = "1.42.0", features = ["full"] }
